package ru.darlz.ff.protobuf;

option java_generic_services = true;

message MapEntry {
    required string key = 1;
    required string value = 2;
}

message ParametersEntry {
    required string key = 1;
    repeated string values = 2;
}

message RemoteInternalRequest {
    required string real_path = 1;
    optional bool need_transform = 2;
    repeated MapEntry cookies = 3;
    repeated ParametersEntry parameters = 4;
    required string request_url = 5;
    optional string query_string = 6;
    optional string remote_addr = 7;
    repeated MapEntry headers = 8;
    required int64 user_id = 9;
    required string yalet_name = 10;
}

message RemoteInternalResponse {
    optional string redirect_to = 1;
    repeated MapEntry cookies = 2;
    optional int32 http_status = 3;
    repeated string data = 4;
    repeated string errors = 5;
    repeated MapEntry attributes = 6;
    repeated MapEntry headers = 7;
}

service Processor {
    rpc process (RemoteInternalRequest) returns(RemoteInternalResponse);
}